feat: add endpoint to get all teams that you are a part of
